# cx-app

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js  vue.config.js
.github/workflows/: main.yml
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  regex_tool.rs  update_tool.rs
src/router/: index.js
src/views/: CodeFmtView.vue  HomeView.vue  RegexView.vue  about.vue  codeFmt.vue  index.vue  regex.vue
